appId: com.taollc.taosocial
---
- launchApp:
   appId: "com.taollc.taosocial"
   clearState: true
- waitForAnimationToEnd
- tapOn: "http://localhost:8081"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Continue"
- swipe:
   from: "Bluesky"
   direction: DOWN
